# claude_py_experimental_repo

./: .env.example  CLAUDE.md  Dockerfile  README.md  api_server.py  docker-compose.yml  mcp_server.py  pyproject.toml
docker/claude-code/: .mcp.json.example  Dockerfile
docker/webhook/: Dockerfile  server.py
docs/superpowers/plans/: 2026-04-13-reduce-image.md
docs/superpowers/specs/: 2026-04-13-reduce-image-design.md
mcp_servers/: data.py  images.py  pdf.py
scripts/: approssima_colori.py  converti_in_svg.py  gdrive_folder_to_pdf.py  merge_pdfs.py  reduce_image.py  split_grid.py  test_hello.py
tests/: test_gdrive_folder_to_pdf.py
