[project]
name = "claude-py-experimental"
version = "0.2.0"
description = "Esperimenti con Claude Code in Python"
requires-python = ">=3.11"

dependencies = [
    "pypdf>=4.2.0",
    # MCP server
    "mcp>=1.0.0",
    # HTTP API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
