[project]
name = "claude-py-experimental"
version = "0.2.0"
description = "Esperimenti con Claude Code in Python"
requires-python = ">=3.11"

dependencies = [
    "pypdf>=4.2.0",
    # MCP server
    "mcp>=1.0.0",
    # HTTP API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # split-grid
    "pillow>=10.0.0",
    "requests>=2.31.0",
    # converti-in-svg (vettorizzazione AMS-ready)
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "potracer>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
